# shoe

./: README
CVS/: Entries  Repository
doc/: COPYRIGHT
doc/CVS/: Entries  Repository
lib/: init.shoe  testsuite.shoe
lib/CVS/: Entries  Repository
src/: .cvsignore  Makefile.in  acconfig.h  args.c  args.h  bif.c  bif.h  big.c  big.h  bootstrap.h  configure  configure.in  deb.c  deb.h  err.c  err.h  exit.c  exit.h  garb.c  garb.h  instructions.h  invocation.h  kernel.c  kernel.h  lexer.c  lexer.h  map.c  map.h  mat.c  mat.h  mem.c  mem.h  mkconfigure  pair.c  pair.h  port.c  port.h  process.c  process.h  smartlink.c  (+10 more)
src/CVS/: Entries  Repository
